fixed product card alignment

--- a/assets/base.css
+++ b/assets/base.css
@@ -990,6 +990,7 @@ pre code {
   display: block;
 }
 .card {
+  height: 100%;
   position: relative;
   display: -ms-flexbox;
   display: flex;
@@ -1947,7 +1948,7 @@ summary::-webkit-details-marker {
 }
 .grid__item {
   width: calc(25% - var(--grid-mobile-horizontal-spacing) * 3 / 4);
-  max-width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
+  max-width: calc(50% - var(--grid-mobile-horizontal-spacing) * 3 / 4);
   flex-grow: 1;
   flex-shrink: 0;
 }
@@ -1955,7 +1956,7 @@ summary::-webkit-details-marker {
 @media screen and (min-width: 768px) {
   .grid__item {
     width: calc(25% - var(--grid-desktop-horizontal-spacing) * 3 / 4);
-    max-width: calc(50% - var(--grid-desktop-horizontal-spacing) / 2);
+    max-width: calc(25% - var(--grid-desktop-horizontal-spacing) * 3 / 4);
   }
 }
 .grid--gapless.grid {
