--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -181,6 +181,10 @@
   padding: 0;
 }
 .card__content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 15px;
 }
 .card__content--auto-margins {
